Refactor add buttons(TableLayout -> GridLayout)

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,8 +11,9 @@
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_view"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -23,518 +24,25 @@
         android:id="@+id/bottom_nav_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
         android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 
-    <TableLayout
-        android:id="@+id/tableLayout"
+    <GridLayout
+        android:id="@+id/gridLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/colorButton1"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton2"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton3"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton4"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton5"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton6"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton7"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton8"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/colorButton9"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton10"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton11"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton12"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton13"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton14"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton15"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton16"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/colorButton17"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton18"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton19"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton20"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton21"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton22"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton23"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton24"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/colorButton25"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton26"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton27"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton28"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton29"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton30"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton31"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton32"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/colorButton33"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton34"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton35"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton36"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton37"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton38"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton39"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton40"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/colorButton41"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton42"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton43"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton44"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton45"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton46"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton47"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton48"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/colorButton49"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton50"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton51"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton52"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton53"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton54"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton55"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton56"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/colorButton57"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton58"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton59"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton60"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton61"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton62"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton63"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton64"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/colorButton65"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton66"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton67"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton68"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton69"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton70"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton71"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton72"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/colorButton73"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton74"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton75"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton76"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton77"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton78"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton79"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton80"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/colorButton81"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton82"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton83"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton84"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton85"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton86"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton87"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-
-            <Button
-                android:id="@+id/colorButton88"
-                style="@style/color_button"
-                android:background="@drawable/color_button_shape" />
-        </TableRow>
-
-
-    </TableLayout>
+        android:layout_height="wrap_content"
+        android:columnCount="8"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+    </GridLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
