OnClick attribute -> OnClickListener

--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -24,4 +24,8 @@
         <item name="android:backgroundDimEnabled">true</item>
         <item name="android:windowFullscreen">true</item>
     </style>
+    
+    <style name="datepicker" parent="android:Widget.Material.Light.DatePicker">
+        <item name="android:textColorPrimary">@android:color/white</item>
+    </style>
 </resources>
