--- a/app/src/main/res/layout/activity_color_selection.xml
+++ b/app/src/main/res/layout/activity_color_selection.xml
@@ -27,7 +27,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:calendarViewShown="false"
-                android:datePickerMode="spinner" />
+                android:datePickerMode="spinner"
+                android:theme="@style/datepicker"/>
         </LinearLayout>
 
         <LinearLayout
