--- a/app/src/main/res/layout/activity_color_selection.xml
+++ b/app/src/main/res/layout/activity_color_selection.xml
@@ -56,8 +56,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
                 android:layout_margin="16dp"
-                app:srcCompat="@android:drawable/ic_menu_edit"
-                app:backgroundTint="#FFFFFF"
+                android:src="@android:drawable/ic_menu_edit"
+                app:backgroundTint="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
